# review-analysis-ai

./: .gitignore  README.md  manage.py  pyproject.toml  schema.yml
django_review_analysis_ai/: asgi.py  settings.py  urls.py  wsgi.py
review_analysis_ai/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
review_analysis_ai/migrations/: 0001_initial.py
