[tool.poetry]
name = "review-analysis-ai"
version = "0.1.0"
description = ""
authors = ["yersmad <yersmad@gmail.com>"]
readme = "README.md"
packages = [{include = "review_analysis_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.26.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
